# fractals-rust-cpu

./: .gitignore  Cargo.toml  README.md
src/: complex.rs  main.rs  vec3.rs  vec4.rs
