[package]
name = "fractal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
sdl2 = { version = "*", features = ["ttf", "gfx"] }
crossbeam = "*"
rayon = "*"
enum-iterator = "*"
colorgrad = "*"
